Refactor code for type safety and modern Java practices (#608)
- Updated various classes to use generics for collections, enhancing type safety and reducing unchecked warnings.
- Replaced deprecated Cactus testing framework with JUnit 5 annotations in PSKeywordDependencyHandlerTest.
- Improved logging methods in PSLogger to use parameterized types.
- Refactored PSBetwixtObjectConverter to use generics for Enum handling.
- Enhanced PSXmlSerializationHelper and PSCollection to utilize generics.
- Updated PSHttpConnection and related classes to use parameterized types for Maps.
- Modified IOTools and PSFileFilter to specify generic types for lists.
- Improved PSBijectionMap and PSConcurrentList to use generics for better type safety.
- Refactored PSHtmlParamDocument to ensure type safety in parameter handling.
- Updated mvn-env.sh to improve script portability by using SCRIPT_DIR.
- General code cleanup and modernization across multiple utility classes.